GetBestDeals and Show movie catalog features fully implemented

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,7 +15,9 @@
   "MovieDataAccess": {
     "FilmWorldApiEndpoint": "https://webjetapitest.azurewebsites.net/api/filmworld/",
     "CinemaWorldApiEndpoint": "https://webjetapitest.azurewebsites.net/api/cinemaworld/",
-    "ApiKey": "sjd1HfkjU83ksdsm3802k"
+    "ApiKey": "sjd1HfkjU83ksdsm3802k",
+    "retryDelayMilliseconds": 3000,
+    "maxRetries" : 3  
   },
   "AllowedHosts": "*"
 }
