--- a/appsettings.json
+++ b/appsettings.json
@@ -6,11 +6,8 @@
       "Hangfire": "Information"
     }
   },
-  //"ConnectionStrings": {
-  //  "DefaultConnection": "Server=localhost; Port=5432; User Id=appuser; Password=secret; Database=moviestore"
-  //},
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=store.db"
+    "DefaultConnection": "Server=host.docker.internal; Port=5432; User Id=appuser; Password=secret; Database=moviestore"
   },
   "MovieDataAccess": {
     "FilmWorldApiEndpoint": "https://webjetapitest.azurewebsites.net/api/filmworld/",
